[package]
name = "trace-game"
version = "1.0.1"
edition = "2021"
description = "A terminal typing game written in rust, local multiplayer support planned"
repository = "https://github.com/ElrohirGT/trace"
license = "GPL-3.0"
keywords = ["terminal", "game", "type"]
categories = ["command-line-utilities"]
include = ["database.csv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "trace-game"
test = false
bench = false
path = "src/main.rs"

[dependencies]
tui = "0.18.0"
crossterm = "0.23"
serde = {version = "1.0", features = ["derive"]}
rand = "0.8"
chrono = "0.4"
csv = "1.1"